# hookbridge

./: Cargo.toml  Dockerfile  README.md  config.sample.yml  docker-compose.yml
src/: main.rs
src/http/: mod.rs  root.rs
src/model/: config.rs  destination.rs  mod.rs  service.rs
