[package]
name = "hookbridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
axum-extra = { version = "0.7.7", features = ["cookie"] }
markdown = "0.3.0"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["trace", "fs", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
urlencoding = "2.1.3"
openssl = { version = "0.10", features = ["vendored"] }
